<resources>
    <string name="app_name">TheMovie</string>
    <string name="tab_text_0">Popular</string>
    <string name="tab_text_1">Top 250</string>
    <string name="tab_text_2">Favorite</string>
    <string name="tv_clue_favorites_empty">Your favorite movies is empty!</string>
    <string name="error_message_unknown_host_exception">Check INTERNET connection</string>
    <string name="error_message_socket_timeout_exception">Check INTERNET connection</string>
    <string name="cd_poster" translatable="false">poster</string>
    <string name="tv_popular_place_label_text">Popul.</string>
    <string name="tv_top_250_place_label_text">Top-250</string>
    <string name="tv_year_label_text">Year</string>
    <string name="tv_duration_label_text">Duration</string>
    <string name="tv_genre_label_text">Genre</string>
    <string name="tv_country_label_text">Country</string>
    <string name="favorite_added">Add to favorite!</string>
    <string name="favorite_deleted">Deleted from favorite!</string>
    <string name="tv_age_limits_label_text">Age limit</string>
    <string name="preference_file_key" translatable="false">theMoviePreferenceFile</string>
    <string name="cd_gallery_frame" translatable="false">frame in gallery</string>
    <string name="tv_frames_label_text">Frames</string>
    <string name="tv_facts_label_text">Facts</string>
    <string name="tv_videos_label_text">Videos</string>
    <string name="tv_similars_label_text">Similars</string>
    <string name="tv_button_kinopoisk_text">Kinopoisk</string>
    <string name="tv_fact_warning_text">Warning! Spoiler</string>
    <string name="tv_see_more_text">See more..</string>
    <string name="tv_facts_top_label_text">Facts</string>
    <string name="tv_imdb_label_text">IMDB</string>
    <string name="tv_critics_label_text">Critic.</string>
    <string name="tv_reviews_label_text">Reviews</string>
    <string name="cd_search">search</string>
    <string name="tf_search_keywords_hint">find..</string>
    <string name="bt_search_text">Search</string>
    <string name="tv_clue_empty_search_text">We haven\'t found anything.. so far</string>
    <string name="tv_read_more">read more</string>
    <string name="tv_review_top_label_text">Review</string>
    <string name="tv_staff_label_text">Staff</string>
    <string name="tv_person_top_label_text">Person</string>
    <string name="tv_birthday_label_text">Birthday</string>
    <string name="tv_death_label_text">Death</string>
    <string name="tv_age_label_text">Age</string>
    <string name="tv_birthplace_label_text">Place of Birth</string>
    <string name="tv_growth_label_text">Growth</string>
    <string name="tv_death_place_label_text">Place of death</string>
</resources>